UBERF-6636: Fix todos auto expand if collapsed

--- a/packages/theme/styles/components.scss
+++ b/packages/theme/styles/components.scss
@@ -457,7 +457,7 @@
     }
     &.medium {
       padding: var(--spacing-1_5) var(--spacing-2);
-      min-height: var(--global-large-Size);
+      min-height: var(--global-medium-Size);
       
       .hulyAccordionItem-header__label-wrapper {
         &.withIcon {
